tests/cases/should_fail/literals/unclosed_unicode_literal.stderr
error: invalid character escape sequence. expected `}` after a escape sequence
 --> $DIR/unclosed_unicode_literal.hash:3:14
2 |   
3 |   k := '\u{005a';
  |                ^ here
